Add second paragraph

--- a/index.html
+++ b/index.html
@@ -84,5 +84,6 @@ Facebook</a> | <a href="https://www.facebook.com/elinband/"> Band "ELIN"
 </a>
         	</h1>
         </footer>
+	<p> to jest wyzwanie </p>
     </body>
 </html>
