--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-        	<h1>Cześć, nazywam się</h1>
+        	<h1 class="">Cześć, nazywam się</h1>
         	<p> Andrzej </p>
         </header>
          <main class="container">
