--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         </header>
          <main class="container">
         	<section class="about">
-        		<h2> Kim Jestem ? </h2>
-        		<p> Dawno temu , w dalekiej krainie, ja -Aku!, zmieniający postać władca ciemności, rozpętałem niewypowiedziane zło....</p>
+        		<h2> Kim Jestem ? no właśnie</h2>
+        		<p> Dawno temu , w dalekiej krainie, ja -Aku!, zmieniający postać władca ciemności, rozpętałem niewypowiedziane zło, ale porywczy Samuraj....</p>
         	</section>
             <section class="interests">
             	<h2> Mam różne zainteresowania </h2>
