Add new class for body

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title> Nowa Strona </title>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
-    <body>
+    <body class="">
         <header>
         	<h1 class="">Cześć, nazywam się</h1>
         	<p> Andrzej </p>
