Add new li and h2

--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
             <section class="interests">
             	<h2> Mam różne zainteresowania </h2>
             	<ul>
-            		<li>gra na perkusji</li>
+            		<li>zmiana/konflikt</li>
+			<li>gra na perkusji</li>
             		<li>sztuki walki</li>
             		<li>obecnie programowanie</li>
 			<li>jazda na rolkach </li>
 			<li>warzenie piwa</li>
             	</ul>
-            	<h2> Więcej o mnie:</h2>
+            	<h2> Więcej o mnie:::</h2>
             	<ul>
             		<li> W latach 1997 do 2001 byłem 
 niekwestionowanym mistrzem Polski w skradaniu się w ortalionowym 
